_patterns/cards/cards.css
.img-item > div {
  max-height: 12em;
  overflow: hidden;
}

.transition {
  transition: all .3s ease-in-out;
}

.img-item:hover div,
.img-item:focus div {
  z-index: 25;
  filter: drop-shadow(0 2px 6px rgba(0, 0, 0, .2));
  transform: scale(1.1);
}

.img-item:focus div {
  outline: 4px solid var(--color-purple);
  outline-offset: 4px;
}

.overlay {
  position: fixed;
  z-index: 99;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, .9);

  display: flex;
  align-items: center;
  text-align: center;

  overflow-y: auto;

  opacity: 0;
}

.overlay .img-expand {

  max-width: 75%;
  max-height: 90%;

  width: 100%;
  height: auto;
}

.img-expand:focus {
  outline: 3px solid #fff;
  outline-offset: 8px;
}

.img-close {
  position: fixed;
  top: 0;
  right: 0;
}

.btn-ctrl {
  opacity: .6;
}

.btn-ctrl i > svg {
  fill: #fff;
}

.overlay {
  display: none;
}

.controls {
  display: none;
  width: 100%;

  position: fixed;
  z-index: 100;
  left: 0;
  top: 50%;
  transform: translateY(-50%);
}

.btn-prev {
  transform: rotate(180deg);
}

.img-btn + .overlay:target {
  display: block;
  opacity: 1;
}

.btn-ctrl:hover {
  opacity: 1;
  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, .8));
  transition: all .2s ease-in-out;
}

.no-scroll {
  position: fixed;
  width: 100%;
}

.caption {
  color: #fff;
}

.overlay .btn-ctrl:focus {
  outline-color: #fff;
  opacity: 1;
  outline-offset: 6px;
}

@media only screen and (min-width: 90em) {

  .overlay .img-expand {
    max-width: 65%;
  }

}

